# g11_prii3_ws

./: .gitignore  README.md  README_S1.md  README_S2.md  README_S3.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
launch/: autonomous_navigation_demo.launch.py  empty_world_launch.py  f1l3_world.launch.py  launch  navigation_waypoints.launch.py  obstacle_activity.launch.py  predefined_navigation_demo.launch.py  sprint1.launch.py  sprint2_collision_avoidance.launch.py  sprint2_complete.launch.py  sprint2_draw_number_jetbot.launch.py  sprint2_obstacle_avoidance.launch.py  turtlebot3_empty_world.launch.py
log/: latest_build
src/backup_files/: setup.py
src/backup_files/launch/: sprint1.launch.py
src/g11_prii3/: collision_avoidance_simulation.py  draw_number_simulation.py  laser_filter.py  sprint2_demo.py  test_turtlebot3.py  trajectory_controller.py  turtlebot3_teleop_keyboard.py
src/g11_prii3_move_jetbot/: draw_number_jetbot.py
src/g11_prii3_move_turtlebot/: collision_avoidance_simulation.py  draw_collision_avoidance.py  draw_number_simulation.py  draw_obstacle_avoidance.py  g11_prii3_move_turtlebot.py  obstacle_avoidance_simulation.py  obstacle_spawner.py
src/g11_prii3_nav_jetbot/: aruco_bag_processor.py  aruco_detector.py
src/g11_prii3_nav_turtlebot/: aruco_detector_autonomous.py  autonomous_navigation.py  nav2_params.yaml  predefined_navigation.py  predefined_waypoints.yaml  waypoint_navigator.py  waypoints.yaml
src/g11_prii3_turtlesim/: package.xml  setup.cfg  setup.py
src/g11_prii3_turtlesim/g11_prii3_turtlesim/: test_turtle.py  turtle_draw.py
worlds/: F1L3.world  mapa_f1l3.pgm  mapa_f1l3.yaml  worlds
worlds/F1L3/: model.config  model.sdf
worlds/codes_aruco/aruco_1/: model.config  model.sdf
worlds/codes_aruco/aruco_2/: model.config  model.sdf
worlds/codes_aruco/aruco_3/: model.config  model.sdf
(+9 files in other folders)
